# GWstudio

./: .gitignore  CODEX_RELEASE_WORKFLOW.md  FILE_MAP.md  LICENSE_MANIFEST.md  PORTABLE_RELEASE.md  README.md  README_LICENSE_BLOCK.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_SIGNING.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_TOOLS.md
game-and-watch-retro-go-sylverb/: .gitmodules  Dockerfile  Makefile.common  README.md  STM32H7B0VBTx_FLASH.ld  parse_roms.py  requirements.txt
gw-studio-tauri/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gw-studio-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gw-studio-tauri/src-tauri/portable/: .gitkeep
gw-studio-tauri/src-tauri/src/: app_status.rs  backup_read.rs  backups.rs  bios.rs  build_events.rs  build_images.rs  build_metrics.rs  build_workspace.rs  bundle_lookup.rs  device.rs  device_state.rs  file_picker.rs  firmware_build.rs  firmware_image.rs  flash.rs  game_watch_patch.rs  gnwmanager_transport.rs  lib.rs  main.rs  paths.rs  process_helpers.rs  process_stream.rs  pyocd_transport.rs  retro_go_build.rs  retro_go_patch.rs  retro_go_source.rs  roms.rs  runtime.rs  service_bridge.rs  spi_helper.rs  startup.rs  stock.rs  thumbnails.rs  toolchain.rs  updater.rs
licenses/: README.md  npm-dependencies.md  python-pip-freeze.txt  rust-dependencies.md
release_keys/: allowed_signers  gwstudio_release_ed25519.pub
scripts/: check-release-safety.ps1  create-cortex-m7-pruned-gcc.ps1  create-portable-archives.ps1  create-pruned-gcc-from-trace.ps1  create-tools-archive.ps1  (+7 more)
(+89 files in other folders)
