[package]
name = "gw_studio_tauri"
version = "1.0.13"
description = "GW Studio desktop shell"
edition = "2021"
license = "Unlicense"

[lib]
name = "gw_studio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
crc32fast = "1.4"
ed25519-dalek = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.0", features = [] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Com_Urlmon", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
# The portable build embeds large ZIP assets. Keeping release opt-level at 0 avoids
# LLVM out-of-memory failures while preserving a single-file executable.
opt-level = 0
